añadimos nombre completo y saludos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Git y hub</title>
     </head>
     <body>
-        <p>Hola Jesús</p>
+        <p>Hola Jesús Martín Pero</p>
+        <hr />
+        <p>Saludos</p>
     </body>
 </html>
